Fixed small bug with complete button - was too close to other elements

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,18 @@ img {
   border-radius: 5px;
   width: 50%;
 }
+.completeEdit {
+  margin-top: 20px;
+  margin-left: 5px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    rgba(93, 12, 255, 1) 0%,
+    rgba(155, 0, 250, 1) 100%
+  );
+  color: #fff;
+  text-transform: capitalize;
+}
